--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             line-height: 40px;
             font-size: 16px;
             font-family: 'Titillium Web', sans-serif;
-            width: 190px;
+            width: 150px;
             color: #333333;
             padding: 6px 8px;
             background: white;
@@ -160,7 +160,7 @@ legend.onAdd = function () {
     //the next 3 lines call the airbnb icon along with its proper color
     //notice the names of the Airbnb property types listed within the <p> tags at the end of the lines
     div.innerHTML += '<i class="fab fa-airbnb marker-color-1"></i><p>Entire house</p>';
-    div.innerHTML += '<i class="fab fa-airbnb marker-color-2"></i><p>Private room in house</p>';
+    div.innerHTML += '<i class="fab fa-airbnb marker-color-2"></i><p>Private room</p>';
     div.innerHTML += '<i class="fab fa-airbnb marker-color-3"></i><p>Other</p>';
     // Return the Legend div containing the HTML content
     return div;
